// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api:cache 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default"
            type="button"
          >
            <span>
              Reload
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
        >
          <span
            class="cxd-TplField"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`api:cache 2`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-toolbar"
        >
          <button
            class="cxd-Button cxd-Button--default"
            type="button"
          >
            <span>
              Reload
            </span>
          </button>
        </div>
        <div
          class="cxd-Page-body"
        >
          <div
            class="cxd-Spinner-overlay"
          />
          <div
            class="cxd-Spinner cxd-Spinner--overlay"
            data-testid="spinner"
          >
            <div
              class="cxd-Spinner-icon cxd-Spinner-icon--lg cxd-Spinner-icon--default"
            />
          </div>
          <span
            class="cxd-TplField"
          >
            <span>
              The variable value is 1
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
